--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,9 @@ php:
   - '5.5'
   - '5.6'
   - '7.0'
+before_script:
+  - pear install --alldeps pear/PHP_CodeSniffer
+  - phpenv rehash
+script:
+  - phpunit -c ./phpunit.xml
+  - phpcs --extensions=php -p --standard=PSR2 ./
